# proxialpha

./: .dockerignore  .gitignore  Architecture_Document.docx  Dockerfile.agent  HYPERLIQUID_INTEGRATION_ANALYSIS.md  Installation_Guide.docx  README.md  SUBSCRIPTION_STRATEGY.md  TESTING.md  Usage_Guide.docx  alembic.ini  config_ai_integration.yaml  config_dashboard.yaml  config_strategies.yaml  config_trading.yaml  config_watchlist.yaml  install.sh  main.py  pyproject.toml  requirements.txt  start.sh  test_platform.py
.github/workflows/: agent-build.yml
api/: observability.py  server.py  wellknown.py
api/agent/: __init__.py  enroll.py  heartbeat.py  install_tokens.py  license_issuer.py  schemas.py
api/billing/: __init__.py  endpoints.py  entitlement_seeder.py  feature_gates.py  handlers.py  install_tokens_admin.py  read.py  schemas.py  support_bundles.py  webhook.py
api/middleware/: __init__.py  auth_stub.py  clerk_auth.py  rate_limit.py
backtesting/: __init__.py  engine.py  metrics.py
config/: tiers.yaml
core/: __init__.py  ai_decision_maker.py  config.py  data_engine.py  db.py  demo_data.py  diary.py  entitlements.py  indicators.py  jwt_keys.py  key_providers.py  llm_adapter.py  risk_manager.py  settings.py  stripe_client.py
dashboard/: app.jsx
deploy/: Dockerfile.controlplane  cron.md  docker-compose.controlplane.yml  postgres-init.sql
docs/: README.md
docs/adr/: ADR-001-hybrid-topology.md  ADR-002-billing-and-entitlements.md  ADR-003-license-token-and-heartbeat.md  ADR-004-llm-gateway.md  ADR-005-multitenancy.md
docs/prompts/: 01-db-schema-and-migrations.md  02-stripe-webhook-handler.md  03-checkout-and-portal-endpoints.md  04-entitlement-decorator-and-consume.md  05-metering-job.md  06-agent-heartbeat-endpoint.md  07-agent-boot-and-license-client.md  08-agent-docker-image-and-ci.md
docs/runbooks/: control-plane-deploy.md  incident-license-revocation.md  signing-key-rotation.md
docs/specs/: phase1-entitlements-and-billing.md  phase2-customer-agent.md  phase2-go-live-gap-analysis.md
jobs/: __init__.py  meter_usage.py
live_trading/: __init__.py  alpaca_bot.py  broker_protocol.py  hyperliquid_bot.py
migrations/: env.py
migrations/versions/: 20260411_0001_initial_schema.py  20260411_0002_bg_worker_role.py  20260411_0003_agent_heartbeat_columns.py  20260411_0004_enrollment_and_revocation.py  20260411_0005_clerk_org_id.py  20260411_0006_support_bundles.py
mobile/: App.js  api.js  app.json  package.json  theme.js
mobile/components/: Badge.js  Card.js  ConfidenceBar.js  MetricBox.js  MiniChart.js  SignalBadge.js
mobile/screens/: AILabScreen.js  DashboardScreen.js  SettingsScreen.js  SignalsScreen.js  StrategiesScreen.js  TradeScreen.js
paper_trading/: __init__.py  simulator.py
proxialpha_agent/: __init__.py  __main__.py  cli.py  doctor.py  health.py  heartbeat.py  license.py  modes.py  settings.py  supervisor.py  version.py
proxialpha_agent/keys/: __init__.py
scripts/: build_agent.sh  smoke.sh  test_ai.py  test_api.py  test_backtest.py  test_imports.py  test_ollama.py  test_paper.py  test_risk.py  test_routing.py  verify_image.sh
shared/: api_client.js
strategies/: __init__.py  ai_strategy.py  base.py  breakout.py  custom_rules.py  dca.py  dip_buyer.py  earnings_play.py  mean_reversion.py  momentum.py  options_flow.py  pairs_trading.py  scalping.py  sector_rotation.py  strategy_manager.py  swing_trading.py  technical.py  trend_following.py
tests/: test_agent_boot.py  test_billing_endpoints.py  test_doctor_bundle.py  test_entitlements.py  test_heartbeat_endpoint.py  test_license_client.py  test_meter_usage.py  test_mode_machine.py  test_schema.py  test_webhook_handler.py
web/: app.jsx  index.html
